# skillcert_contracts

contracts/course/course_registry/: Cargo.toml
contracts/course/course_registry/src/: lib.rs  test.rs  utils.rs
contracts/course/course_registry/src/functions/: add_module.rs  create_course.rs  delete_course.rs  get_courses_by_instructor.rs
contracts/course/course_registry/test_snapshots/functions/add_module/test/: test_add_module_success.1.json
